fixed logo color on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ a{
 }
 
 .logo{
-    color: #FFFF;
+    color: #ec5250;
     font-size: 40px;
     font-style: normal;
     font-weight: 100;
